Name:          Snake
Version:       1.0.0
Cabal-Version: >= 1.2
License:       BSD3
Author:        Becky Conning
Homepage:      https://github.com/beckyconning/haskell-snake
Category:      Games
Synopsis:      Simple and short implementation of a Snake game. Any pull requests which make it shorter or cleaner would be greatly appreciated : ).
Build-type:    Simple

Library
  Build-Depends: base >= 4.7,
                 monad-loops >= 0.4.2.1
